TbaMUD is currently being developed by The Builder Academy. If you need any
help, find any bugs, or have ideas for improvement please stop by TBA at 
telnet://tbamud.com:9091 or email rumble@tbamud.com --Rumble
@
[Apr 11 2013] - Rumble
  Added color parsing to wiznet.
[Apr 10 2013] - Rumble
  Another wiznet fix to add returns for add_history.
[Apr 10 2013] - Fizban
  Fixed wiznet so it is viewable in OLC again.
[Apr 09 2013] - Rumble
  Fixed warning in genzon.c checking bottom_of_zone. (Thanks Fizban)
[Apr 08 2013] - Rumble
  Fixed color bleeding in level range menu. (Thanks Silvaria)
  Fixed typos, updated help.
[Apr 03 2013] - Rumble
  Fixed typo in Whirlwind
  Added color to poofs.
[Mar 02 2013] - Rumble
  Updated World and files for 3.64 release.
[Feb 12 2013] - Vatiken
  feature: New group system.
  feature: Room events.
  bug: Many small bug fixes.
[Sep 08 2012] - Rumble
  added another example to doc/syserr.txt
  Added a !NPC check to can_take_object. It was spamming a "mob using player data SYSERR". 
This means mobs do not have a max weight carrying capacity anymore. I think this is a good 
thing because I've seen people stumped when mob triggers fail due to weight limitations. 
But it could be unbalancing on some MUDs since pets could then carry unlimited gear.
[Aug 22 2012] - Rumble
  bug: moved cedit load_config of no_mort_to_immort to its proper place. (thanks Liko)
[Aug 12 2012] - Vatiken
  bug: fixed typo in dg_variables.c (Thanks Zusuk)
[Aug 08 2012] - Vatiken
  bug: fixed another copyover issue that resulted in dying character respawning at corpse.
  bug: fixed an issue where a PC could be remembered after dying. (Thanks Zusuk)
  improve: cleaned up some code and did some colour adjustments.
  feature: new debug toggle with 4 settings.
  bug: fixed an issue with hedit that prevented editing of certain helpfiles.
  feature: added message editor for combat messages.
  bug: fixed a small bug with colour codes in interpreter.c.